--- a/src/docs/asciidoc/web/webmvc.adoc
+++ b/src/docs/asciidoc/web/webmvc.adoc
@@ -6105,11 +6105,9 @@ brotli-encoded resources) and `VersionResourceResolver`, you must register them 
 That ensures content-based versions are always computed reliably, based on the unencoded file.
 
 https://www.webjars.org/documentation[WebJars] are also supported through the
-`WebJarsResourceResolver` which is automatically registered when the
-`org.webjars:webjars-locator-core` library is present on the classpath. The resolver can
-re-write URLs to include the version of the jar and can also match against incoming URLs
-without versions -- for example, from `/jquery/jquery.min.js` to
-`/jquery/1.2.0/jquery.min.js`.
+`WebJarsResourceResolver` which is automatically registered. The resolver can re-write
+URLs to include the version of the jar and can also match against incoming URLs without
+versions -- for example, from `/jquery/jquery.min.js` to `/jquery/1.2.0/jquery.min.js`.
 
 TIP: The Java configuration based on `ResourceHandlerRegistry` provides further options
 for fine-grained control, e.g. last-modified behavior and optimized resource resolution.
